[gd_scene load_steps=12 format=3 uid="uid://cd8rd0jeagfgk"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_v42dn"]
[ext_resource type="Shader" path="res://shaders/lens_distortion.gdshader" id="2_2tuv1"]
[ext_resource type="PackedScene" uid="uid://fn4ue284pmgv" path="res://scenes/motion_blur.tscn" id="3_exjny"]
[ext_resource type="PackedScene" uid="uid://co17e02wjtxyj" path="res://scenes/inv_ui.tscn" id="3_xobia"]
[ext_resource type="Texture2D" uid="uid://bqc2yi07yr0cr" path="res://textures/kenney_prototype_textures/purple/texture_13.png" id="4_mfvxq"]
[ext_resource type="PackedScene" uid="uid://neq05g58knog" path="res://hotbaar.tscn" id="4_nlvn4"]
[ext_resource type="Script" path="res://hotbar.gd" id="5_0ug83"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p04uo"]
shader = ExtResource("2_2tuv1")
shader_parameter/intensity = 1.0
shader_parameter/offset = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wlhci"]
height = 1.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ato0x"]
albedo_texture = ExtResource("4_mfvxq")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nn3m3"]
material = SubResource("StandardMaterial3D_ato0x")
height = 1.7

[node name="Player" type="CharacterBody3D" groups=["Player"]]
process_mode = 3
script = ExtResource("1_v42dn")

[node name="ShaderLayer" type="CanvasLayer" parent="."]

[node name="pincushion" type="ColorRect" parent="ShaderLayer"]
material = SubResource("ShaderMaterial_p04uo")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="pickupUI" type="ColorRect" parent="UILayer"]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.192157, 0.376471, 0.321569, 0.839216)

[node name="Label" type="Label" parent="UILayer/pickupUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -11.5
offset_right = 74.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press \"F\" to pick up"

[node name="itemUI" type="ColorRect" parent="UILayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="inv_UI" parent="UILayer/itemUI" instance=ExtResource("3_xobia")]
layout_mode = 1

[node name="hotbar" parent="UILayer/itemUI" instance=ExtResource("4_nlvn4")]
script = ExtResource("5_0ug83")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.65, 0)

[node name="motion_blur" parent="Camera" instance=ExtResource("3_exjny")]

[node name="Body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_wlhci")

[node name="BodyMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_nn3m3")

[node name="GroundCheck" type="RayCast3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.85, 0)
target_position = Vector3(0, -1.5, 0)
debug_shape_custom_color = Color(0.0705882, 0.309804, 1, 1)
debug_shape_thickness = 5

[node name="LeftWallCheck" type="RayCast3D" parent="."]
transform = Transform3D(-1.74846e-08, 0.4, 0, -0.4, -1.74846e-08, 0, 0, 0, 0.4, -0.4, -0.55, 0)
target_position = Vector3(0, -1.5, 0)
debug_shape_custom_color = Color(0.0705882, 0.309804, 1, 1)
debug_shape_thickness = 5

[node name="RightWallCheck" type="RayCast3D" parent="."]
transform = Transform3D(7.78829e-08, -0.4, 0, 0.4, 7.78829e-08, 0, 0, 0, 0.4, 0.4, -0.55, 0)
target_position = Vector3(0, -1.5, 0)
debug_shape_custom_color = Color(0.0705882, 0.309804, 1, 1)
debug_shape_thickness = 5

[node name="DashCooldownTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
